[tool.poetry]
name = "yanara"
version = "0.1.0"
description = ""
authors = ["lemorage <one.lemorage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
letta = "^0.5.2"
lark-oapi = "^1.3.6"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
