[tool.poetry]
name = "yanara"
version = "0.1.0"
description = "An infinite-memory multi-agent system, controlled by a single delegator yanara"
authors = ["lemorage <one.lemorage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
letta = "^0.5.2"
lark-oapi = "^1.3.6"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
