[tool.poetry]
name = "yanara"
version = "0.1.0"
description = "An infinite-memory multi-agent system, controlled by a single delegator yanara"
authors = ["lemorage <one.lemorage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
letta = "^0.5.2"
lark-oapi = "^1.3.6"
rich = "^13.9.4"
lingua-language-detector = "^2.0.2"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
responses = "^0.25.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests"
]
pythonpath = [
    ".",
    "yanara",
]
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
